# mosaic

./: .gitignore  LICENSE  README.md  image.py  main.py  mosaic.py  pyproject.toml  requirements.txt
mosaic/: __init__.py  __main__.py  image.py  mosaic.py
